--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,18 +3,14 @@ html{
 }
 /* header section */
 .header h1{
-  font-family: Helvetica;
   font-size: 100px;
-  font-weight: bold;
   color: khaki;
   text-align: center;
   background-image: url("../images/pattern.jpeg");
 }
-/* product title banner section */
-.title h1{
-  font-family: Helvetica;
+/* product banner section */
+h1.title{
   font-size: 32px;
-  font-weight: bold;
   color: white;
 }
 .brushes div.title{
@@ -28,7 +24,6 @@ html{
 }
 /* product description */
 .pricing{
-  font-family: Helvetica;
   font-weight: bold;
   color: blue;
 }
